fix: Header link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     font-size: 16px;
     font-family: serif;
   }
+  a {
+    color: #58d668;
+  }
+  a:hover {
+    color: #74e883 !important;
+    cursor: pointer;
+  }
   .container {
       position: relative;
       text-align: center;
@@ -37,7 +44,6 @@
 
   .header {
     font-size: 50px;
-    color: #58d668;
   }
 
   #table {
@@ -61,7 +67,7 @@
 <body>
     <div class="container">
       <div>
-        <span class="header">PaintSwap BRUSH</span><br /><br />
+        <span class="header"><a href="https://paintswap.finance/" target="_blank">PaintSwap BRUSH</a></span><br /><br />
         <span class="refreshed"></span><br /><br />
         <table id="table">
           <th id="table1"></th>
