--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
    display: inline;
   }
 
+  #table td {
+    padding-right: 10px;
+  }
+
   @media only screen and (min-width: 600px) {
     .container > div {
       top: 5%;
@@ -75,7 +79,7 @@
             <td style="text-align: right;">
               <span class="big">USD</span>
             </td>
-            <td>
+            <td style="text-align: left;">
               <span class="brush big"></span><br />
             </td>
           </tr>
@@ -83,7 +87,7 @@
             <td style="text-align: right;">
               <span class="big">FTM</span>
             </td>
-            <td>
+            <td style="text-align: left;">
               <span class="ftm big"></span><br />
             </td>
           </tr>
@@ -91,7 +95,7 @@
             <td style="text-align: right;">
               <span class="big">SUPPLY</span>
             </td>
-            <td>
+            <td style="text-align: left;">
               <span class="mc big"></span><br />
             </td>
           </tr>
