--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     background-color: black;
     color: #a49ddc;
     font-size: 16px;
-    font-family: serif;
+    font-family: sans-serif;
   }
   a {
     color: #58d668;
@@ -62,7 +62,7 @@
     }
   @media only screen and (min-width: 1200px) {
     .container > div {
-      top: 30%;
+      top: 20%;
       margin-top: -9px;
     }
   }
