--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <title>BRUSH Price</title>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <meta charset="UTF-8">
-  <meta name="description" content="PaintSwap Price">
+  <meta name="description" content="PaintSwap Live Price Widget">
   <meta name="keywords" content="paintswap,brush,ftm,amm">
   <meta name="author" content="Paintoshi">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="./favicon.png"/>
 </head>
 
 <style>
