fix: Better logo size on 2k

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
       height: 7vw;
     }
   }
+
+  @media only screen and (min-width: 2000px) {
+    .header {
+      height: 5vw;
+    }
+  }
 </style>
 
 <body>
