fix: Better colors

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
   .big {
     font-size: 30px;
     line-height: 1.4;
-    color: #d92eef;
+    color: #52d0d7;
   }
 
   .medium {
     font-size: 15px;
     line-height: 1.4;
     margin-right: 10px;
-    color: #d92eef;
+    color: #52d77c;
   }
 
   .header {
